# docs/swagger.yaml
@@ -29,3 +29,61 @@ paths:
                   msg:
                     type: string
                     example: Health Check OK!
+
+  /person/register:
+    post:
+      description: Register a Person
+      tags:
+        - Person
+
+      requestBody:
+        description: A JSON object containing person information
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                [personalEmailId, gender, firstName, dateOfBirth, phoneNumber]
+              properties:
+                personalEmailId:
+                  type: string
+                  example: hello@world.com
+                gender:
+                  type: string
+                  enum: [MALE, FEMALE, OTHERS]
+                  example: MALE
+                firstName:
+                  type: string
+                  example: Harry
+                middleName:
+                  type: string
+                  example: James
+                lastName:
+                  type: string
+                  example: Potter
+                dateOfBirth:
+                  oneOf:
+                    - type: string
+                    - type: number
+                  description: The Date String or Date Epoch
+                  example: Fri Oct 07 2022 08:15:15 GMT+0530 (India Standard Time)
+                phoneNumber:
+                  type: array
+                  items:
+                    type: string
+                  example: ["9152539529", "09152539529", "+919152539529"]
+
+      responses:
+        200:
+          description: Registered Successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: number
+                    example: 200
+                  msg:
+                    type: string
+                    example: Registration Successfully.
