# src/global/constants/validation.ts
@@ -1,0 +1,5 @@
+const email = /^[0-9A-Za-z._]+@[A-Za-z]{2,}(\.[0-9A-Za-z]{2,})+$/;
+const name = /^[A-Z]([a-z]{1,})$/;
+const phoneNumber = /^((\+91)|0)?([0-9]{10})$/;
+
+export { email, name, phoneNumber };
