# src/routes/person.ts
@@ -1,9 +1,15 @@
 import { Router } from "express";
 
+import * as Middleware from "@middlewares";
+import * as Controllers from "@controllers";
+
 const router: Router = Router({ mergeParams: true });
 
-router.post("/register");
-router.get("/details/:personalEmail");
-router.patch("/details/:personalEmail/update");
+router.post(
+  "/register",
+  Middleware.Email.check,
+  Middleware.Person.checkNotExists,
+  Controllers.Person.register
+);
 
 export default router;
